--- a/3d-portfolio-website/package.json
+++ b/3d-portfolio-website/package.json
@@ -27,6 +27,8 @@
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "styled-components": "^6.1.8",
+    "swiper": "^12.0.3",
+    "tailwindcss": "^4.1.17",
     "three": "^0.161.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
